# petit-message-queue

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/transport/: __init__.py
src/transport/http/: __init__.py
src/utils/: ids.py
tests/unit/: __init__.py  test_ids.py
