[project]
name = "petit-message-queue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.15.4",
]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
